fix: overflow text

--- a/public/base.css
+++ b/public/base.css
@@ -321,12 +321,14 @@
 
 .card {
   border: 2px solid var(--grey);
-  width: fit-content;
+  width: 15rem;
+  max-width: 100%;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   position: relative;
+  word-break: break-all;
 }
 
 .card > img {
